--- a/src/FooterLarge.astro
+++ b/src/FooterLarge.astro
@@ -1,6 +1,5 @@
 ---
-
-import ThemeToggle from 'components/theme/ThemeToggle.astro'
+import { ThemeToggle } from "astro-theme";
 
 	
 const socialLinks = [
