--- a/src/FooterSimple.astro
+++ b/src/FooterSimple.astro
@@ -1,6 +1,6 @@
 ---
 
-import ThemeToggle from 'components/theme/ThemeToggle.astro'
+import { ThemeToggle } from "astro-theme";
 
 	
 const socialLinks = [
