--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/base.astro";
 <Layout>
 </Layout>
 
-<style global>
+<style is:global>
 	body {
 		background: var(--color-bg);
 	}
