--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -1,6 +1,7 @@
 ---
 import { Footer } from "../index.js";
 import routes from "../data/routes.json";
+import "../style/main.scss";
 
 interface Props {
 	pathname?: string;
@@ -14,7 +15,6 @@ const { pathname } = Astro.props as Props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="stylesheet" href={Astro.resolve("../style/main.scss")} />
 	</head>
 
 	<body>
